--- a/package.json
+++ b/package.json
@@ -1,37 +1,51 @@
 {
-  "name": "rafsanzani_io",
+  "name": "gazi-portfolio-test",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material/tab-bar": "^14.0.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.1",
+    "@react-three/drei": "^9.80.1",
+    "@react-three/fiber": "^8.13.6",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.5",
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.15.0",
+    "html-spaceship": "^1.3.4",
+    "maath": "^0.7.0",
+    "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
-    "rsuite": "^5.38.0"
+    "react-scroll": "^1.8.9",
+    "react-tilt": "^1.0.2",
+    "react-typist": "^2.0.5",
+    "reveal": "^0.0.4",
+    "rsuite": "^5.37.1",
+    "three": "^0.155.0",
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
 }
