--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.5",
     "autoprefixer": "^10.4.14",
+    "babel-runtime": "^6.26.0",
     "framer-motion": "^10.15.0",
     "html-spaceship": "^1.3.4",
     "maath": "^0.7.0",
