--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-tilt": "^1.0.2",
     "react-typist": "^2.0.5",
